making sonarqube happy